2019-07-26  Dirk Eddelbuettel  <edd@debian.org>

	* R/anytime.R (utctime, anydate, utcdate): Also use option for
	possible useR default
	* R/format.R: Documentation tweaks
	* man/anytime-package.Rd: Idem
	* man/iso8601.Rd: Idem
	* README.md: Idem
	* vignettes/rmd/anytime-introduction.Rmd: Idem

2019-07-25  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp (r_stringToTime): Correct 'useR' to date conversion

2019-07-24  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* inst/tinytest/test_all_formats.R: Tweaks for Windows tests
	* inst/tinytest/test_bulk.R: Idem

	* .travis.yml (install): Simplified with two fewer required packages

2019-07-23  Dirk Eddelbuettel  <edd@debian.org>

	* R/anytime.R (anytime): The useR argument can now be set via an option
	* man/anytime.Rd: Ditto

2019-07-21  Dirk Eddelbuettel  <edd@debian.org>

	* inst/tinytest/test_r_format.R: Deactivate test as it fails on Travis

2019-07-20  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/anytime.cpp (r_stringToTime): Use Rcpp::Function to access R
	functionality instead of using RApiDatetime

	* DESCRIPTION: No longer import RApiDatetime
	* NAMESPACE: Idem

        * inst/tinytest/test_all_formats.R: Loosen Windows test restrictions
	* inst/tinytest/test_gh_issue_96.R: Idem

2019-07-17  Dirk Eddelbuettel  <edd@debian.org>

	* src/anytime.cpp: A few minor #nocov additions
	* inst/tinytest/test_all_formats.R: Add test for anydate with useR

2019-07-16  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version

	* src/anytime.cpp (r_stringToTime): Skip tz argument, change
	internal conversion logic and reflect optional asDate argument

	* inst/tinytest/test_r_format.R: Skip for now
	* inst/tinytest/test_bulk.R (fullPOSIXctEx): Set TZ once

2019-07-14  Dirk Eddelbuettel  <edd@debian.org>

	* R/anytime.R: Add a paragraph warning about possibly issue on