@@ -11,6 +11,6 @@ n1 <- as.numeric(anytime(input, useR = TRUE))
 n2 <- as.numeric(anytime(input))
 n3 <- as.numeric(as.POSIXct(input))
 
-if (!isWindows) expect_equal(n1, n2)
+if (!isWindows) expect_equal(n1, n2, tol=1e-5)
 expect_equal(n1, n3)
-if (!isWindows) expect_equal(n2, n3)
+if (!isWindows) expect_equal(n2, n3, tol=1e-5)
